welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var x: String = ""
^BDRBuggle:16: error: ')' expected but '}' found.
}
^